<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:gravity="center"

    >

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/registration"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrationTextView"
        android:ems="10"
        android:hint="@string/user_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/marginB"
        android:layout_marginLeft="@dimen/marginB"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameEditText"
        android:ems="10"
        android:hint="@string/email_address"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/marginB"
        android:layout_marginLeft="@dimen/marginB"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmailEditText"
        android:ems="10"
        android:hint="@string/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/marginB"
        android:layout_marginLeft="@dimen/marginB"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:ems="10"
        android:hint="@string/password_again"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/marginB"
        android:layout_marginLeft="@dimen/marginB"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordAgainEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/registration" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel" />

    </LinearLayout>


</RelativeLayout>