<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >


    <TextView
        android:id="@+id/cim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Múzeumi belépő jegy vásárlás"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/marginA"
        android:layout_marginRight="@dimen/marginA"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserName"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/cim"
        app:layout_constraintVertical_bias="0.322"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/marginB"
        android:layout_marginRight="@dimen/marginB"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        app:layout_constraintVertical_bias="0.142"
        android:layout_marginTop="@dimen/marginA"
        android:layout_marginLeft="@dimen/marginB"
        android:layout_marginRight="@dimen/marginB"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:layout_marginTop="@dimen/marginA"
        android:layout_marginLeft="@dimen/marginB"
        android:layout_marginRight="@dimen/marginB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/registration"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>